--- a/index.html
+++ b/index.html
@@ -541,15 +541,8 @@ body{
 .container.center{
   max-width: 720px;
   margin: 0 auto;
-  padding: 0 18px;
+  padding: 56px 18px 72px;
   text-align: center;
-
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
- justify-content: center;
-padding-top: 120px;
-padding-bottom: 120px;
 }
 
 .stack{
@@ -1074,6 +1067,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
