--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ header, main, footer{
 }
 /* Bakstenen SVG als subtiele achtergrond */
 body{
-  background-image: url("images/bricks.jpg");
+  background-image: url("images/bricks2.png");
   background-repeat: repeat;
   background-size: 320px auto;  /* grootte van de bakstenen */
   background-color: #ffffff;    /* wit eronder */
@@ -1066,6 +1066,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
