--- a/index.html
+++ b/index.html
@@ -529,13 +529,26 @@ header, main, footer{
   body::before{
     opacity: .10; /* nog subtieler op mobiel */
   }
-}
 /* Bakstenen SVG als subtiele achtergrond */
 body{
   background-image: url("images/bricks2.png");
-  background-repeat: repeat;
-  background-size: 320px auto;  /* grootte van de bakstenen */
-  background-color: #ffffff;    /* wit eronder */
+  background-repeat: no-repeat;              /* geen herhaling */
+  background-position: center center;        /* gecentreerd */
+  background-size: cover;                    /* vult hele scherm */
+  background-attachment: fixed;              /* blijft vast */
+  background-color: #ffffff;
+}
+    @media (max-width: 768px){
+  body{
+    background-attachment: scroll;
+}
+      body::before{
+  content:"";
+  position: fixed;
+  inset: 0;
+  background: rgba(255,255,255,0.85);
+  pointer-events: none;
+  z-index: 0;
 }
 .container.center{
   max-width: 720px;
@@ -1066,6 +1079,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
