--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@ body{
     textarea{min-height:120px; resize:vertical}
     .small{font-size:13px; color:rgba(255,255,255,.72)}
     
-   footer{
-  border-top: 1px solid #000;  /* zwarte lijn */
+  footer{
+  border-top: none;   /* zwarte lijn weg */
   margin-top: 64px;
   padding: 12px 0 18px;
   text-align: center;
   font-size: 12px;
   color: #111;
-    }
+}
     footer .inner{
       max-width:var(--max);
       margin:0 auto;
@@ -1072,6 +1072,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
