--- a/index.html
+++ b/index.html
@@ -810,7 +810,11 @@ html, body{
     overflow: hidden;
     overscroll-behavior: none;
     touch-action: none; /* voorkomt swipe-scroll op mobiel */
-  }
+}
+  html, body{
+  height: 100%;
+  overflow: hidden;
+}
 }
   </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1072,6 +1076,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
