--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   
 /* =========================
-   Bres — CLEAN CSS (Bricks repeat versie)
+   Bres — CLEAN CSS 
    ========================= */
 
 :root{
@@ -53,7 +53,7 @@ html, body, button, input, textarea, a{
    ========================= */
 
 html{
-  background: url("images/bricks.png") repeat;
+  background: url("images/bricks.jpg") repeat;
   background-size: 320px auto; /* pas aan indien nodig */
   background-color:#fff;
 }
@@ -586,6 +586,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
