--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <meta name="description" content="Restaurant Bres te Antwerpen. Bekijk openingsuren en contactgegevens.">
   <meta name="theme-color" content="#0b0b0b" />
 
+  </style>
   
 /* =========================
    Bres — CLEAN CSS 
@@ -586,6 +587,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
