--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html, body, button, input, textarea, a{
 
 /* Background repeat */
 html{
-  background: url("images/bricks.jng") repeat;
+  background: url("images/bricks.jpg") repeat;
   background-size: 320px auto;
   background-color:#fff;
 }
@@ -448,6 +448,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
