--- a/index.html
+++ b/index.html
@@ -248,6 +248,26 @@ footer .inner{
   padding: 8px 12px;
   font-size: 0.8rem;
 }
+/* =========================
+   Snellere fade onderaan
+   ========================= */
+
+body::after{
+  content:"";
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 22vh; /* kleiner = snellere fade */
+  pointer-events: none;
+  z-index: 0;
+
+  background: linear-gradient(
+    to bottom,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.95) 100%
+  );
+}
 
 /* Mobile */
 @media (max-width:600px){
@@ -522,6 +542,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
