--- a/index.html
+++ b/index.html
@@ -249,23 +249,23 @@ footer .inner{
   font-size: 0.8rem;
 }
 /* =========================
-   Snellere fade onderaan
+   Industriële hoge fade
    ========================= */
 
 body::after{
   content:"";
   position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 22vh; /* kleiner = snellere fade */
+  inset: 0;
   pointer-events: none;
   z-index: 0;
 
   background: linear-gradient(
     to bottom,
     rgba(255,255,255,0) 0%,
-    rgba(255,255,255,0.95) 100%
+    rgba(255,255,255,0) 30%,   /* nog volledig baksteen */
+    rgba(255,255,255,0.6) 55%, 
+    rgba(255,255,255,0.9) 75%,
+    rgba(255,255,255,1) 100%
   );
 }
 
@@ -542,6 +542,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
