--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ footer .inner{
   font-size: 0.8rem;
 }
 /* =========================
-   Industriële hoge fade
+   Hoge industriële fade
    ========================= */
 
 body::after{
@@ -259,13 +259,13 @@ body::after{
   pointer-events: none;
   z-index: 0;
 
- background: linear-gradient(
-  to bottom,
-  rgba(255,255,255,0) 0%,
-  rgba(255,255,255,0) 35%,
-  rgba(255,255,255,0.85) 60%,
-  rgba(255,255,255,1) 100%
-);
+  background: linear-gradient(
+    to bottom,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.5) 35%,
+    rgba(255,255,255,0.85) 55%,
+    rgba(255,255,255,1) 75%
+  );
 }
 
 /* Mobile */
@@ -541,6 +541,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
